--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     align-items: center;
     padding-top: 1.5em;
     height: 90vh;
-    border: solid red;
 }
 
 .carousel__items img {
@@ -19,10 +18,9 @@ body {
 }
 
 .carousel__buttons {
-    border: solid green;
     display: flex;
     justify-content: space-between;
-    width: 95%;
+    width: 80%;
 }
 
 .carousel__buttons button {
@@ -32,4 +30,32 @@ body {
     cursor: pointer;
     width: 40px;
     height: 40px;
+    font-size: 1.1rem;
+}
+
+button {
+    background-color: yellowgreen;
+    outline: none;
+}
+
+button:active {
+    box-shadow: 0 5px 8px #888888;
+    transform: translateY(3px);
+}
+
+@media only screen and (min-width: 1024px) {
+    .carousel__items img {
+        height: 400px;
+        width: 500px;
+    }
+    .carousel {
+        justify-content: space-around;
+    }
+    .carousel__buttons {
+        width: 25%;
+    }
+    .carousel__buttons button {
+        width: 3.5vw;
+        height: 7vh;
+    }
 }
